# pymurmur

./: .dockerignore  .gitignore  CHANGELOG.md  V2_COMPLETION_REPORT.md  arch.md  docker.md  pyproject.toml  pytest.ini  requirements-optional.txt  roadmap.md  roadmap_deepseek.md  session.md  tesla-and-the-pronunciation-void.md  test.md
.github/workflows/: guard-rails.yml  test.yml
TODO/: roadmap0.md  roadmap1.md  roadmap2.md  roadmap3.md  roadmap4.md  roadmap5.md  roadmap6.md
ci/: Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml  entrypoint-gpu.sh  entrypoint.sh
conf/: evo_open.yaml  field_ink_cloud.yaml  field_lava_lamp.yaml  field_predator_ripple.yaml  field_quiet_roost.yaml  field_silk_sheet.yaml  field_storm_turn.yaml  field_vacuole.yaml  murmuration.yaml  murmuration_300k.yaml  murmuration_angle.yaml  murmuration_boids.yaml  murmuration_evo.yaml  murmuration_field.yaml  murmuration_influencer.yaml  murmuration_marl.yaml  murmuration_spatial.yaml  murmuration_starlings.yaml  murmuration_vicsek.yaml
conf/examples/: murmuration_nested.yaml
git_mur/: .gitignore  arch.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  session.md  test.md
git_mur/.github/: gantt-schedule.md
git_mur/.github/workflows/: test.yml
git_mur/ci/: Dockerfile  Dockerfile.gpu  docker-compose.yml
git_mur/conf/: murmuration_300k.yaml  murmuration_evo.yaml
git_mur/conf/examples/: murmuration_nested.yaml
git_mur/pymurmur/: __main__.py
git_mur/pymurmur/analysis/: density_scaling.py  phase_diagram.py  presets.py
git_mur/pymurmur/capture/: recorder.py
git_mur/pymurmur/core/: types.py
git_mur/pymurmur/physics/: flock.py  steric.py
git_mur/pymurmur/physics/extensions/: __init__.py  ecology.py
git_mur/pymurmur/physics/forces/: spatial.py
git_mur/pymurmur/viz/: __init__.py  camera.py  input_control.py  renderer.py  shaders.py
git_mur/sci/: todo_claude.md  todo_claude2.md  todo_claude_git0.md  todo_claude_git4.md  todo_claude_git6.md  todo_claude_git7.md  todo_claude_sci10.md
git_mur/test/: conftest.py  regenerate_golden.py  test_architecture.py  test_cli.py  test_collection_count.py  test_config_drift.py  test_docs.py  test_facade.py  test_golden.py  test_performance.py  test_subsystem_a.py
git_mur/test/analysis/: test_density_scaling.py  test_evoflock.py  test_h2.py  test_metrics.py  test_phase_diagram.py  test_presets.py
git_mur/test/capture/: test_recorder.py
git_mur/test/core/: test_config.py
git_mur/test/data/: golden_field.npz  golden_influencer.npz  golden_projection.npz  golden_spatial.npz
git_mur/test/physics/: test_flock.py  test_obstacles.py  test_occlusion.py
git_mur/test/physics/extensions/: test_threat.py
git_mur/test/physics/forces/: test_angle.py  test_base.py  test_forces.py  test_vicsek_core.py  test_vicsek_species.py
git_mur/test/viz/: test_input.py  test_renderer.py  test_shaders.py  test_trails.py
pymurmur/: __init__.py  __main__.py
pymurmur/analysis/: density_scaling.py  evoflock.py  gym_env.py  metrics.py  perf.py  phase_diagram.py  presets.py  rewards.py
pymurmur/capture/: mpl_recorder.py  recorder.py
pymurmur/core/: config.py  logging.py  types.py
pymurmur/physics/: boid.py  flock.py  obstacles.py  occlusion.py  steric.py
pymurmur/physics/extensions/: __init__.py  _base.py  ecology.py  predator.py  ripple.py  wander.py
pymurmur/physics/forces/: __init__.py  _base.py  _kernels.py  _mode.py  angle.py  field.py  influencer.py  marl.py  projection.py  (+2 more)
pymurmur/simulation/: engine.py
pymurmur/viz/: __init__.py  camera.py  hud.py  input_control.py  mesh_registry.py  renderer.py  shaders.py  trails.py  visualizer.py
sci/: todo_claude1.md  todo_claude3.md  todo_claude_git1.md  todo_claude_git2.md  todo_claude_git3.md  todo_claude_git5.md  todo_claude_sci1.md  todo_claude_sci11.md  todo_claude_sci2.md
scripts/: generate_evolved_artifact.py  rollout_marl.py  run_evoflock_small.py  soak_release_gate.py  train_marl.py
test/: conftest.py  helpers.py  regenerate_golden.py  test_architecture.py  test_cli_e2e.py  test_composers.py  test_config_drift.py  test_config_files.py  test_config_resolution.py  test_e2e.py  test_facade.py  test_golden.py  test_i4_integration.py  test_i4_unit.py  test_i6_integration.py  test_i7_config_contract.py  test_imports.py  test_mode_switch_no_crash.py  test_performance.py  test_phase2_cross_item.py  test_scaling.py  test_subsystem_a.py  test_subsystem_b.py  test_subsystem_c.py  test_subsystem_d.py  test_subsystem_e.py  test_subsystem_f.py
test/acceptance/: test_phase1.py  test_phase3.py
test/analysis/: test_h2.py  test_marl.py  test_metrics.py  test_metrics_invariance.py  test_metrics_schema.py  test_perf.py  test_phase9.py  test_phase_diagram.py  test_presets.py  test_probe.py  test_rewards.py
test/capture/: test_recorder.py
test/core/: test_config.py  test_config_validation.py  test_types.py
test/data/: golden_angle.npz  golden_angle_sphere.npz  golden_field.npz  golden_field_sphere.npz  golden_influencer.npz  golden_influencer_sphere.npz  golden_projection.npz  golden_projection_sphere.npz  golden_spatial.npz  golden_spatial_sphere.npz  golden_vicsek.npz  golden_vicsek_sphere.npz
test/l0_system/: test_cli.py  test_cli_e2e.py  test_e2e.py  test_mode_switch_no_crash.py  test_probe.py
test/l1_subsystems/: test_subsystem_b.py  test_subsystem_d.py  test_subsystem_f.py
test/l2_integration/: test_capture_pipeline.py  test_config_contract.py  test_cross_subsystem.py  test_defect_regressions.py  test_engine_pipeline.py  test_render_contract.py
test/l3_subsystems/: conftest.py  test_subsystem_a.py  test_subsystem_c.py  test_subsystem_e.py
test/l4_system/: test_cli.py  test_config_files.py  test_config_resolution.py  test_facade.py
test/physics/: test_boid.py  test_composition.py  test_flock.py  test_holey_mask_composition.py  test_obstacles.py  test_occlusion.py  test_phase3_coverage_gaps.py  test_phase3_integration.py  test_spatial_index_contract.py  test_steric.py
test/simulation/: test_engine.py
test/viz/: test_camera.py  test_renderer.py
(+130 files in other folders)
