# pyproject.toml — pymurmur packaging, lint, and type-check configuration.
# pytest configuration intentionally lives in pytest.ini (single source;
# test.md references it) — do not add [tool.pytest.ini_options] here.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymurmur"
version = "0.1.0"
description = "3D starling murmuration simulation: 7 interchangeable physics models, headless-capable, ModernGL visualization, scientific metrics"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
# Optional layers mirror arch.md §9 — the core stays headless-minimal.
viz = [
    "pygame>=2.5,<3.0",
    "moderngl>=5.8,<6.0",
    "PyGLM>=2.7,<3.0",
]
capture = [
    "Pillow>=10.0,<12.0",
    "matplotlib>=3.7,<4.0",
]
numba = [
    "numba>=0.58,<1.0",
]
marl = [
    "gymnasium>=0.29,<2.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "pytest-xdist>=3.0,<4.0",
    "pytest-timeout>=2.0,<3.0",
]
lint = [
    "ruff>=0.4,<1.0",
    "mypy>=1.8,<2.0",
]

[tool.setuptools.packages.find]
include = ["pymurmur*"]

# ── Ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "NPY",        # numpy-specific rules
    "B",          # bugbear
]
ignore = [
    "E501",       # long lines in formula-heavy comments/docstrings
    "B008",       # function call in default arg
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["B011", "NPY002"]  # allow assert False style + legacy np.random in tests
"test/l2_integration/test_engine_pipeline.py" = ["B023"]  # spy functions in loop called within same iteration

# ── Coverage ──────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["pymurmur"]
omit = [
    "test/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true

# ── Mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
